--- a/css/style.css
+++ b/css/style.css
@@ -4,26 +4,28 @@
   box-sizing: border-box;
 }
 
-.bartop{
-  height: 60px;
-}
 
 .blue{
-  background-color: lightblue;
+  background-color: #2c3e50;
 }
 .white{
   color: white;
 }
 
-.navbar{
-  margin-bottom: 0;
+.center{
+  /* height: 300px; */
+  background-color: #1abc9c;
+}
+
+.upc{
+  text-transform: uppercase;
 }
 
 .bd{
   border: 1px solid black;
 }
  .green{
-   background-color: lightgreen;
+   background-color: #1abc9c;
 
  }
  .txt-c{
@@ -42,7 +44,37 @@
   margin-bottom: 20px;
 }
 
+.pdb-50{
+  padding-bottom: 50px;
+}
+
+.mrg-t55{
+  margin-top: 52px;
+}
+
 .end{
   height: 40px;
   background-color: lightblue;
+}
+
+.smile-boy{
+  height: 250px;
+  padding-top: 50px;
+}
+
+.title{
+  font-size: 60px;
+  font-weight: bolder;
+  text-transform: uppercase;
+}
+
+.square{
+  border-top: 3px solid white;
+  width: 10%;
+  display: inline-block;
+  padding-top: 3px;
+}
+
+.size{
+  font-size: 25px;
 }
