--- a/css/style.css
+++ b/css/style.css
@@ -4,9 +4,14 @@
   box-sizing: border-box;
 }
 
+.text-col{
+  color: #2c3e50;
+  font-weight: bolder;
+}
 
 .blue{
   background-color: #2c3e50;
+
 }
 .white{
   color: white;
@@ -15,6 +20,11 @@
 .center{
   /* height: 300px; */
   background-color: #1abc9c;
+}
+
+.pdtb{
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
 
 .upc{
@@ -36,6 +46,14 @@
    border: 5px solid white;
  }
 
+ .bdr{
+   border-radius: 10px;
+ }
+
+ .mrb-5{
+   margin-bottom: 5px;
+ }
+
  .pd-top20{
    padding-top: 20px;
  }
@@ -49,7 +67,7 @@
 }
 
 .mrg-t55{
-  margin-top: 52px;
+  margin-top: 48px;
 }
 
 .end{
@@ -77,4 +95,22 @@
 
 .size{
   font-size: 25px;
+}
+
+.square2{
+  border-top: 3px solid #2c3e50;
+  width: 10%;
+  display: inline-block;
+  padding-top: 3px;
+}
+
+
+ .piccola{
+  width: 100%;
+  height: 100%;
+}
+
+.slide{
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
