--- a/css/style.css
+++ b/css/style.css
@@ -145,8 +145,7 @@ margin: 10px;
   padding-top: 3px;
 }
 
-
- .piccola{
+.piccola{
   width: 100%;
   height: 100%;
 }
@@ -174,5 +173,9 @@ margin: 10px;
 }
 
 #navbar .navbar-nav a:hover{
+  color: #1abc9c;
+}
+
+.navbar-default .navbar-brand:hover{
   color: #1abc9c;
 }
